--- a/views/game.haml
+++ b/views/game.haml
@@ -26,61 +26,6 @@
         .answerLinks
         %form.freeForm
           %input{:type => "text"}
+  %script{:src => "/game.js"}
   :javascript
-    var pretty = function(str) {
-      return ({
-      }[str] || str)
-    }
-    var options_for_question = function(question) {
-      if (question == "select_character") {
-        return #{Game.character_names}
-      } else return false;
-    }
-    var oldData
-    var setUI = function(data) {
-      // We should short circuit unless there have been updates.
-      $('.board .space').empty()
-      var requiredInput = data['requiredInput']
-      $('.currentQuestion').html(requiredInput)
-      var opts = options_for_question(requiredInput)
-      if (opts) {
-        $('.freeForm').hide()
-        var $answerLinks = $('.answerLinks')
-        $answerLinks.empty()
-        for (var i = 0; i < opts.length; i += 1) {
-          var str = '<a href="#" onclick="return(false);" choice="' + opts[i] + '"> ' + pretty(opts[i]) + " </a>"
-          $answerLinks.append(str)
-        }
-        $answerLinks.show()
-      } else {
-        $('.freeForm').show()
-        $('.answerLinks').hide()
-      }
-      var gameState = data['gameState']
-      $('.eventLog').html(gameState['events'].join("\n"))
-    }
-    var ping = function() {
-      $.get('/ping/#{@game_id}/', {
-        'player_id': "#{@player_id}"
-      }, function(data) {
-        setUI(data)
-        setTimeout(ping, 1000)
-      }, 'json')
-    }
-    $(function() {
-      $('input').closest('form').on('submit', function() {
-        var $input = $(this).find('input')
-        $.post('/games/#{@game_id}/', {
-          'player_id': "#{@player_id}",
-          'action': $input.val()
-        }, function(data) {
-          setUI(data)
-        }, 'json')
-        return false;
-      })
-      $('.answerLinks').on('click', 'a', function() {
-        $('.freeForm input').val($(this).attr('choice'))
-        $('.freeForm').submit()
-      })
-      ping()
-    })
+    Game.init("#{@player_id}", "#{@game_id}", #{Game.character_names})
