the ui is starting to come together. Still looks like ass, though.

--- a/views/game.haml
+++ b/views/game.haml
@@ -17,6 +17,17 @@
         .space.space-5
         .space.space-6
       .myCards
+        .myHand
+          .bases
+            .card dash
+            .card grasp
+            .card drive
+          .styles
+            .card focused
+            .card trance
+            .card advancing
+        .discard1
+        .discard2
       .theirCards
       .eventLog
       .userInput
