--- a/views/game.haml
+++ b/views/game.haml
@@ -4,6 +4,7 @@
     %title
       BC
     %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"}
+    %link{:href => "/game.css", :type => "text/css", :rel => "stylesheet"}
   %body
     %h1
       Battlecon
