--- a/public/game.css
+++ b/public/game.css
@@ -16,7 +16,7 @@
   border: 1px solid black;
   float: left;
   margin: 5px;
-  width: 300px;
+  width: 400px;
   height: 300px;
 }
 
@@ -37,4 +37,9 @@
   height: 250px;
   border: 1px solid black;
   display: inline-block;
+}
+
+.attack-pair.attack-pair-small .base, .attack-pair.attack-pair-small .style {
+  width: 75px;
+  height: 125px;
 }
