--- a/views/game.haml
+++ b/views/game.haml
@@ -35,8 +35,12 @@
             .card focused
             .card trance
             .card advancing
-        .discard1
-        .discard2
+        .discard1.attack-pair.attack-pair-small
+          .style
+          .base
+        .discard2.attack-pair.attack-pair-small
+          .style
+          .base
       .their-cards.card-collection
         them </br>
       .clear{:style => "clear: both"}
