Some more WIP on interface.

--- a/views/game.haml
+++ b/views/game.haml
@@ -24,6 +24,7 @@
         .space.space-4
         .space.space-5
         .space.space-6
+        .clear{:style => "clear: both"}
       .my-cards.card-collection
         ME </br>
         .my-hand
@@ -31,6 +32,9 @@
             .card dash
             .card grasp
             .card drive
+            .card strike
+            .card shot
+            .card burst
           .styles
             .card focused
             .card trance
