--- a/public/game.css
+++ b/public/game.css
@@ -8,7 +8,8 @@
   width: 83px;
   height: 83px;
   border: 1px solid black;
-  display: inline-block;
+  float:left;
+  margin: 3px;
 }
 
 .card-collection
@@ -17,7 +18,7 @@
   float: left;
   margin: 5px;
   width: 400px;
-  height: 300px;
+  height: 400px;
 }
 
 .card {
