--- a/views/game.haml
+++ b/views/game.haml
@@ -3,7 +3,8 @@
   %head
     %title
       BC
-    %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"}
+    %script{:src => "/jquery.min.js"}
+    %link{:href => "/bootstrap.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/game.css", :type => "text/css", :rel => "stylesheet"}
   %body
     %h1
