--- a/public/game.css
+++ b/public/game.css
@@ -1,49 +1,19 @@
-.game {
-  width: 900px;
-  margin: auto;
-}
-
-.space
-{
-  width: 83px;
-  height: 83px;
-  border: 1px solid black;
-  float:left;
-  margin: 3px;
-}
-
-.card-collection
-{
-  border: 1px solid black;
-  float: left;
-  margin: 5px;
-  width: 400px;
-  height: 400px;
-}
-
-.card {
-  border: 1px solid black;
-  margin: 3px;
-}
-
-.select-me .card:hover{
-  cursor: pointer;
-}
-.click-me {
-  cursor: pointer;
-}
-
 .attack-pair {
-  display: inline-block;
-}
-.attack-pair .base, .attack-pair .style {
-  width: 150px;
   height: 250px;
-  border: 1px solid black;
-  display: inline-block;
+  /*background-color: #ccc;*/
+}
+.space {
+  margin-bottom: 5px;
 }
 
-.attack-pair.attack-pair-small .base, .attack-pair.attack-pair-small .style {
-  width: 75px;
-  height: 125px;
+.space, .funny-well {
+  min-height: 50px;
+  background-color: #eee;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.style {
+  text-align: right;
 }
