--- a/views/game.haml
+++ b/views/game.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{:lang => 'en'}
   %head
     %title
       BC
@@ -7,56 +7,93 @@
     %link{:href => "/bootstrap.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/game.css", :type => "text/css", :rel => "stylesheet"}
   %body
-    %h1
-      Battlecon
-    .game
-      .my-attack-pair.attack-pair
-        .style
-        .base
-      .their-attack-pair.attack-pair
-        .style
-        .base
-      .board
-        Current Game board: </br>
-        .space.space-0
-        .space.space-1
-        .space.space-2
-        .space.space-3
-        .space.space-4
-        .space.space-5
-        .space.space-6
-        .clear{:style => "clear: both"}
-      .my-cards.card-collection
-        ME </br>
-        .my-hand
-          .bases
-            .card dash
-            .card grasp
-            .card drive
-            .card strike
-            .card shot
-            .card burst
-          .styles
-            .card focused
-            .card trance
-            .card advancing
-        .discard1.attack-pair.attack-pair-small
-          .style
-          .base
-        .discard2.attack-pair.attack-pair-small
-          .style
-          .base
-      .their-cards.card-collection
-        them </br>
-      .clear{:style => "clear: both"}
-      .eventLog
-      .userInput
-        .prompt
-          You need to answer:
-          %span.current-question
-        .answer-links
-        %form.free-form
-          %input{:type => "text"}
+    .container
+      %h1
+        Battlecon
+      .row.attack-pairs
+        .span4.offset2
+          .attack-pair.row
+            .span2.funny-well.style
+              Focused
+              .rpp
+                .range 1
+                .power 1
+                .priority 1
+            .span2.funny-well.base
+              Strike
+              .rpp
+                .range 1
+                .power 1
+                .priority 1
+        .span4
+          .attack-pair.row
+            .span2.funny-well.style
+              Focused
+              .rpp
+                .range 1
+                .power 1
+                .priority 1
+            .span2.funny-well.base
+              Strike
+              .rpp
+                .range 1
+                .power 1
+                .priority 1
+      .row
+        .span1.space.offset2 1
+        .span1.space 2
+        .span1.space 3
+        .span1.space 4
+        .span1.space 5
+        .span1.space 6
+        .span1.space 7
+      .row
+        .span2.funny-well
+          %h2 Tokens
+          %h6 (Will use Collapsable Plugin)
+          .token Earth
+          .token Water
+          .token Wind
+          .token Fire
+        .span2.funny-well
+          %h4 Styles
+          .card Advancing
+          .card Trance
+          .card Geomantic
+          .card Sweeping
+          .card Focused
+        .span2.funny-well
+          %h4 Bases
+          .card Dash
+          .card Grasp
+          .card Palm Strike
+          .card Drive
+          .card Strike
+          .card Shot
+          .card Burst
+        .span2.funny-well
+          %h4 Styles
+          .card Advancing
+          .card Trance
+          .card Geomantic
+          .card Sweeping
+          .card Focused
+        .span2.funny-well
+          %h4 Bases
+          .card Dash
+          .card Grasp
+          .card Palm Strike
+          .card Drive
+          .card Strike
+          .card Shot
+          .card Burst
+        .span2.funny-well
+          %h2 Tokens
+          %h6 (Will use Collapsable Plugin)
+          .token Earth
+          .token Water
+          .token Wind
+          .token Fire
   %script{:src => "/game.js"}
   :javascript
-    Game.init("#{@player_id}", "#{@game_id}", #{Game.character_names})
+    //Game.init("#{@player_id}", "#{@game_id}", #{Game.character_names})
