Some utility methods.

--- a/views/game.haml
+++ b/views/game.haml
@@ -12,7 +12,7 @@
         Battlecon
       .row.attack-pairs
         .span4.offset2
-          .attack-pair.row
+          .my-pair.attack-pair.row
             .span2.funny-well.style
               .name Focused
               .rpp
