moves event log to middle of UI.

--- a/views/game.haml
+++ b/views/game.haml
@@ -59,64 +59,64 @@
         .span1.space
         .span1.space
         .span1.space
-      .row
-        .span2.funny-well
-          %h4.heading Tokens
-          .collapsable
-            .token Earth
-            .token Water
-            .token Wind
-            .token Fire
-        .span2.funny-well
-          %h4.heading Styles
-          .collapsable
-            .card Advancing
-            .card Trance
-            .card Geomantic
-            .card Sweeping
-            .card Focused
-        .span2.funny-well
-          %h4.heading Bases
-          .collapsable
-            .card Dash
-            .card Grasp
-            .card Palm Strike
-            .card Drive
-            .card Strike
-            .card Shot
-            .card Burst
-        .span2.funny-well
-          %h4.heading Styles
-          .collapsable
-            .card Advancing
-            .card Trance
-            .card Geomantic
-            .card Sweeping
-            .card Focused
-        .span2.funny-well
-          %h4.heading Bases
-          .collapsable
-            .card Dash
-            .card Grasp
-            .card Palm Strike
-            .card Drive
-            .card Strike
-            .card Shot
-            .card Burst
-        .span2.funny-well
-          %h4.heading Tokens
-          .collapsable
-            .token Earth
-            .token Water
-            .token Wind
-            .token Fire
-      .row
+      .row.event-log
         .span12
           .well
             %h6 Game log
             %p Event here!
             %p another event!
             %p event log is great!
+      .row
+        .span2.funny-well
+          %h4.heading Tokens
+          .collapsable
+            .token Earth
+            .token Water
+            .token Wind
+            .token Fire
+        .span2.funny-well
+          %h4.heading Styles
+          .collapsable
+            .card Advancing
+            .card Trance
+            .card Geomantic
+            .card Sweeping
+            .card Focused
+        .span2.funny-well
+          %h4.heading Bases
+          .collapsable
+            .card Dash
+            .card Grasp
+            .card Palm Strike
+            .card Drive
+            .card Strike
+            .card Shot
+            .card Burst
+        .span2.funny-well
+          %h4.heading Styles
+          .collapsable
+            .card Advancing
+            .card Trance
+            .card Geomantic
+            .card Sweeping
+            .card Focused
+        .span2.funny-well
+          %h4.heading Bases
+          .collapsable
+            .card Dash
+            .card Grasp
+            .card Palm Strike
+            .card Drive
+            .card Strike
+            .card Shot
+            .card Burst
+        .span2.funny-well
+          %h4.heading Tokens
+          .collapsable
+            .token Earth
+            .token Water
+            .token Wind
+            .token Fire
   %script{:src => "/game.js"}
   :javascript
     $('body').on('click', '.heading', function() {
