--- a/views/game.haml
+++ b/views/game.haml
@@ -10,116 +10,134 @@
     .container
       %h1
         Battlecon
-      .row.attack-pairs
-        .span4.offset2
-          .my-pair.attack-pair.row
-            .span2.funny-well.style
-              .name Focused
-              .rpp
-                .range 1
-                .power 1
-                .priority 1
-              .effects
-                %em On Hit:
-                Recover one token.
-            .span2.funny-well.base
-              .name Strike
-              .rpp
-                .range 1
-                .power 1
-                .priority 1
-              .effects
-                %em Stun Guard:
-                5
-        .span4
-          .attack-pair.row
-            .span2.funny-well.style
-              .name Focused
-              .rpp
-                .range 1
-                .power 1
-                .priority 1
-              .effects
-                %em On Hit:
-                Recover one token.
-            .span2.funny-well.base
-              .name Strike
-              .rpp
-                .range 1
-                .power 1
-                .priority 1
-              .effects
-                %em On Hit:
-                Recover one token.
-      .row
-        .span1.space.offset2
-        .span1.space
-        .span1.space
-        .span1.space
-        .span1.space
-        .span1.space
-        .span1.space
-      .row.event-log
-        .span12
-          .well
-            %h6 Game log
-            %p Event here!
-            %p another event!
-            %p event log is great!
-      .row
-        .span2.funny-well
-          %h4.heading Tokens
-          .collapsable
-            .token Earth
-            .token Water
-            .token Wind
-            .token Fire
-        .span2.funny-well
-          %h4.heading Styles
-          .collapsable
-            .card Advancing
-            .card Trance
-            .card Geomantic
-            .card Sweeping
-            .card Focused
-        .span2.funny-well
-          %h4.heading Bases
-          .collapsable
-            .card Dash
-            .card Grasp
-            .card Palm Strike
-            .card Drive
-            .card Strike
-            .card Shot
-            .card Burst
-        .span2.funny-well
-          %h4.heading Styles
-          .collapsable
-            .card Advancing
-            .card Trance
-            .card Geomantic
-            .card Sweeping
-            .card Focused
-        .span2.funny-well
-          %h4.heading Bases
-          .collapsable
-            .card Dash
-            .card Grasp
-            .card Palm Strike
-            .card Drive
-            .card Strike
-            .card Shot
-            .card Burst
-        .span2.funny-well
-          %h4.heading Tokens
-          .collapsable
-            .token Earth
-            .token Water
-            .token Wind
-            .token Fire
+      .js-loading
+        Loading...
+      .js-choose-character{:style => "display: none"}
+        .row
+          - Game.character_names.each do |name|
+            %a= name
+      .js-in-game{:style => "display: none"}
+        .row.attack-pairs
+          .span6
+            .my-pair.attack-pair.row
+              .span3.style
+                .well
+                  .name Focused
+                  .rpp
+                    .range 1
+                    .power 1
+                    .priority 1
+                  .effects
+                    %em On Hit:
+                    Recover one token.
+              .span3.base
+                .well
+                  .name Strike
+                  .rpp
+                    .range 1
+                    .power 1
+                    .priority 1
+                  .effects
+                    %em Stun Guard:
+                    5
+            .row
+              .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
+                .btn.js-submit-attack-pair Submit
+          .span6
+            .attack-pair.row
+              .span3
+                .well
+                  .name Focused
+                  .rpp
+                    .range 1
+                    .power 1
+                    .priority 1
+                  .effects
+                    %em On Hit:
+                    Recover one token.
+              .span3.funny-well.base
+                .name Strike
+                .rpp
+                  .range 1
+                  .power 1
+                  .priority 1
+                .effects
+                  %em On Hit:
+                  Recover one token.
+        .row
+          .span1.space.offset2
+          .span1.space
+          .span1.space
+          .span1.space
+          .span1.space
+          .span1.space
+          .span1.space
+        .row.event-log
+          .span12
+            .well
+              %h6 Game log
+              %p Event here!
+              %p another event!
+              %p event log is great!
+        .row
+          .js-mine
+            .span2.funny-well
+              %h4.heading Tokens
+              .collapsable
+                .token Earth
+                .token Water
+                .token Wind
+                .token Fire
+            .span2.funny-well
+              %h4.heading Styles
+              .collapsable.js-styles
+                .card Advancing
+                .card Trance
+                .card Geomantic
+                .card Sweeping
+                .card Focused
+            .span2.funny-well
+              %h4.heading Bases
+              .collapsable.js-bases
+                .card Dash
+                .card Grasp
+                .card Palm Strike
+                .card Drive
+                .card Strike
+                .card Shot
+                .card Burst
+          .js-theirs
+            .span2.funny-well
+              %h4.heading Styles
+              .collapsable
+                .card Advancing
+                .card Trance
+                .card Geomantic
+                .card Sweeping
+                .card Focused
+            .span2.funny-well
+              %h4.heading Bases
+              .collapsable
+                .card Dash
+                .card Grasp
+                .card Palm Strike
+                .card Drive
+                .card Strike
+                .card Shot
+                .card Burst
+            .span2.funny-well
+              %h4.heading Tokens
+              .collapsable
+                .token Earth
+                .token Water
+                .token Wind
+                .token Fire
+        .free-form
+          .row
+            .span4.offset4
+              %form
+                %input{:type => "text", :style => "width: 100%"}
+        .js-answers
   %script{:src => "/game.js"}
   :javascript
-    $('body').on('click', '.heading', function() {
-      $(this).siblings('.collapsable').toggle()
-    })
-    //Game.init("#{@player_id}", "#{@game_id}", #{Game.character_names})
+    Game.init("#{@player_id}", "#{@game_id}")
