Updates error message for invalid input; also updates js.

--- a/views/game.haml
+++ b/views/game.haml
@@ -101,7 +101,7 @@
               .collapsable.js-bases
                 .card Dash
                 .card Grasp
-                .card Palm Strike
+                .card PalmStrike
                 .card Drive
                 .card Strike
                 .card Shot
@@ -109,7 +109,7 @@
           .js-theirs
             .span2.funny-well
               %h4.heading Styles
-              .collapsable
+              .collapsable.js-styles
                 .card Advancing
                 .card Trance
                 .card Geomantic
@@ -117,7 +117,7 @@
                 .card Focused
             .span2.funny-well
               %h4.heading Bases
-              .collapsable
+              .collapsable.js-bases
                 .card Dash
                 .card Grasp
                 .card Palm Strike
