Updates UI to support clashes.

--- a/views/game.haml
+++ b/views/game.haml
@@ -19,7 +19,7 @@
       .js-in-game{:style => "display: none"}
         .row.attack-pairs
           .span6
-            .my-pair.attack-pair.row
+            .js-mine.attack-pair.row
               .span3.style
                 .well
                   .name Focused
@@ -44,7 +44,7 @@
               .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
                 .btn.js-submit-attack-pair Submit
           .span6
-            .attack-pair.row
+            .js-theirs.attack-pair.row
               .span3
                 .well
                   .name Focused
