Exposes life to UI and displays it.

--- a/views/game.haml
+++ b/views/game.haml
@@ -64,14 +64,17 @@
                 .effects
                   %em On Hit:
                   Recover one token.
-        .row.board
-          .span1.space.offset2.s0
-          .span1.space.s1
-          .span1.space.s2
-          .span1.space.s3
-          .span1.space.s4
-          .span1.space.s5
-          .span1.space.s6
+        .row
+          .span2.js-mine.funny-well.life
+          .board
+            .span1.space.s0
+            .span1.space.s1
+            .span1.space.s2
+            .span1.space.s3
+            .span1.space.s4
+            .span1.space.s5
+            .span1.space.s6
+          .span2.js-theirs.offset1.funny-well.life
         .row
           .span12
             .well.event-log
