Clears unset cards.

--- a/views/game.haml
+++ b/views/game.haml
@@ -45,7 +45,7 @@
                 .btn.js-submit-attack-pair Submit
           .span6
             .js-theirs.attack-pair.row
-              .span3
+              .span3.style
                 .well
                   .name Focused
                   .rpp
