Adds token pool.

--- a/views/game.haml
+++ b/views/game.haml
@@ -86,7 +86,7 @@
           .js-mine
             .span2.funny-well
               %h4.heading Tokens
-              .collapsable
+              .collapsable.js-tokens
                 .token Earth
                 .token Water
                 .token Wind
@@ -130,7 +130,7 @@
                 .card Burst
             .span2.funny-well
               %h4.heading Tokens
-              .collapsable
+              .collapsable.js-tokens
                 .token Earth
                 .token Water
                 .token Wind
