Remove unnecesary markup.

--- a/views/game.haml
+++ b/views/game.haml
@@ -22,24 +22,20 @@
             .js-mine.attack-pair.row
               .span3.style
                 .well
-                  .name Focused
+                  .name
                   .rpp
-                    .range 1
-                    .power 1
-                    .priority 1
+                    .range
+                    .power
+                    .priority
                   .effects
-                    %em On Hit:
-                    Recover one token.
               .span3.base
                 .well
-                  .name Strike
+                  .name
                   .rpp
-                    .range 1
-                    .power 1
-                    .priority 1
+                    .range
+                    .power
+                    .priority
                   .effects
-                    %em Stun Guard:
-                    5
             .row
               .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
                 .btn.js-submit-attack-pair Submit
@@ -47,23 +43,20 @@
             .js-theirs.attack-pair.row
               .span3.style
                 .well
-                  .name Focused
+                  .name
                   .rpp
-                    .range 1
-                    .power 1
-                    .priority 1
+                    .range
+                    .power
+                    .priority
                   .effects
-                    %em On Hit:
-                    Recover one token.
-              .span3.funny-well.base
-                .name Strike
-                .rpp
-                  .range 1
-                  .power 1
-                  .priority 1
-                .effects
-                  %em On Hit:
-                  Recover one token.
+              .span3.base
+                .well
+                  .name
+                  .rpp
+                    .range
+                    .power
+                    .priority
+                  .effects
         .row
           .span2.js-mine.funny-well.life
           .board
@@ -87,54 +80,22 @@
             .span2.funny-well
               %h4.heading Tokens
               .collapsable.js-tokens
-                .token Earth
-                .token Water
-                .token Wind
-                .token Fire
             .span2.funny-well
               %h4.heading Styles
               .collapsable.js-styles
-                .card Advancing
-                .card Trance
-                .card Geomantic
-                .card Sweeping
-                .card Focused
             .span2.funny-well
               %h4.heading Bases
               .collapsable.js-bases
-                .card Dash
-                .card Grasp
-                .card PalmStrike
-                .card Drive
-                .card Strike
-                .card Shot
-                .card Burst
           .js-theirs
             .span2.funny-well
               %h4.heading Styles
               .collapsable.js-styles
-                .card Advancing
-                .card Trance
-                .card Geomantic
-                .card Sweeping
-                .card Focused
             .span2.funny-well
               %h4.heading Bases
               .collapsable.js-bases
-                .card Dash
-                .card Grasp
-                .card Palm Strike
-                .card Drive
-                .card Strike
-                .card Shot
-                .card Burst
             .span2.funny-well
               %h4.heading Tokens
               .collapsable.js-tokens
-                .token Earth
-                .token Water
-                .token Wind
-                .token Fire
         .free-form
           .row
             .span4.offset4
