Favicon alert if its your turn.

--- a/views/game.haml
+++ b/views/game.haml
@@ -6,6 +6,7 @@
     %script{:src => "/jquery.min.js"}
     %link{:href => "/bootstrap.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/game.css", :type => "text/css", :rel => "stylesheet"}
+    %link#favicon{:rel => "shortcut icon", :type => "image/png", href:"/icon.png"}
   %body
     .container
       %h1
