Adds a box for current modifiers.

--- a/views/game.haml
+++ b/views/game.haml
@@ -70,12 +70,16 @@
             .span1.space.s6
           .span2.js-theirs.offset1.funny-well.life
         .row
-          .span12
+          .span2
+            .well.js-current-effects.js-mine
+          .span8
             .well.event-log
               %h6 Game log
               %p Event here!
               %p another event!
               %p event log is great!
+          .span2
+            .well.js-current-effects.js-theirs
         .row
           .js-mine
             .span2.funny-well
