--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -13,3 +13,5 @@
     %tr
       %td
         = link_to "#{game.p0.email} VS #{game.p1.email}", game_path(game)
+        - game_badges(game).each do |badge, color|
+          %span.label{class: "lable-#{color}"}= badge
