Adds responsive bootstrap, and a better landing page.

--- a/app/views/home/landing.html.haml
+++ b/app/views/home/landing.html.haml
@@ -1,3 +1,15 @@
 .hero-unit
   %h1 Welcome to Battlecon
-  %p Login in order to play games.
+.row
+  .span4
+    %h2 Play games online
+    %p You'll need to be logged in if you want to play games. But that's ok because it's super easy.
+  .span4
+    %h2 Learn to play the game
+    %p
+      We're too lazy to type up a whole explanation of how to play the game. You can find some rules on the official
+      = link_to "website", "http://battleconnection.com/"
+      = "."
+  .span4
+    %h2 Some other stuff.
+    %p Goes here.
