--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title
       Battlecon
     %link{:href => "/stylesheets/bootstrap.min.css", :type => "text/css", :rel => "stylesheet"}
+    %link{:href => "/stylesheets/bootstrap-responsive.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/game.css", :type => "text/css", :rel => "stylesheet"}
     %link#favicon{:rel => "shortcut icon", :type => "image/png", href:"/icon.png"}
     %script{src: "https://login.persona.org/include.js", type: 'text/javascript'}
