--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %link{:href => "/stylesheets/bootstrap.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/bootstrap-responsive.min.css", :type => "text/css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/game.css", :type => "text/css", :rel => "stylesheet"}
-    %link#favicon{:rel => "shortcut icon", :type => "image/png", href:"/icon.png"}
+    %link#favicon{:rel => "shortcut icon", :type => "image/png", href:"/favicon.gif"}
     %script{src: "https://login.persona.org/include.js", type: 'text/javascript'}
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
