--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,11 +1,13 @@
 .row
-  .span6
+  .span5
     .well
       = current_game.p0.email
       - if current_game.play.characters
         as:
         .label.label-info= current_game.play.characters[0].name.capitalize
-  .span6
+  .span2
+    %h3.js-current-beat
+  .span5
     .well
       = current_game.p1.email
       - if current_game.play.characters
