--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -5,6 +5,9 @@
   text-align: center;
   margin-bottom: 5px;
 }
+.js-current-beat {
+  text-align: center;
+}
 
 .space, .funny-well {
   min-height: 50px;
