Adds discards to the UI.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -90,19 +90,35 @@
       .span2.funny-well
         %h4.heading Tokens
         .collapsable.js-tokens
-      .span2.funny-well
-        %h4.heading Styles
-        .collapsable.js-styles
-      .span2.funny-well
-        %h4.heading Bases
-        .collapsable.js-bases
+      .span2
+        .funny-well
+          %h4.heading Styles
+          .collapsable.js-styles
+        .funny-well
+          %h4.heading Discard 1
+          .collapsable.js-discard1
+      .span2
+        .funny-well
+          %h4.heading Bases
+          .collapsable.js-bases
+        .funny-well
+          %h4.heading Discard 2
+          .collapsable.js-discard1
     .js-theirs
-      .span2.funny-well
-        %h4.heading Styles
-        .collapsable.js-styles
-      .span2.funny-well
-        %h4.heading Bases
-        .collapsable.js-bases
+      .span2
+        .funny-well
+          %h4.heading Styles
+          .collapsable.js-styles
+        .funny-well
+          %h4.heading Discard 1
+          .collapsable.js-discard1
+      .span2
+        .funny-well
+          %h4.heading Bases
+          .collapsable.js-bases
+        .funny-well
+          %h4.heading Discard 2
+          .collapsable.js-discard1
       .span2.funny-well
         %h4.heading Tokens
         .collapsable.js-tokens
