--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -22,69 +22,6 @@
         = name
         = badges(character_badges(name))
 .js-in-game{:style => "display: none"}
-  .row.attack-pairs
-    .span6
-      .js-mine.attack-pair.row
-        .span3.style
-          .well
-            .name
-            .rpp
-              .range
-              .power
-              .priority
-            .effects
-        .span3.base
-          .well
-            .name
-            .rpp
-              .range
-              .power
-              .priority
-            .effects
-      .row
-        .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
-          .btn.js-submit-attack-pair Submit
-    .span6
-      .js-theirs.attack-pair.row
-        .span3.style
-          .well
-            .name
-            .rpp
-              .range
-              .power
-              .priority
-            .effects
-        .span3.base
-          .well
-            .name
-            .rpp
-              .range
-              .power
-              .priority
-            .effects
-  .row
-    .span2.js-mine.funny-well.life
-    .board
-      .span1.space.s0
-      .span1.space.s1
-      .span1.space.s2
-      .span1.space.s3
-      .span1.space.s4
-      .span1.space.s5
-      .span1.space.s6
-    .span2.js-theirs.offset1.funny-well.life
-  .row
-    .span3
-      .well.js-current-effects.js-mine
-    .span6
-      .well.event-log
-        %h6 Game log
-        %p Event here!
-        %p another event!
-        %p event log is great!
-    .span3
-      .well.js-current-effects.js-theirs
-  .js-answers
   .row
     .js-mine
       .span2.funny-well
@@ -122,6 +59,107 @@
       .span2.funny-well
         %h4.heading Tokens
         .collapsable.js-tokens
+
+  .row
+    .span2.js-mine.funny-well.life
+    .board
+      .span1.space.s0
+      .span1.space.s1
+      .span1.space.s2
+      .span1.space.s3
+      .span1.space.s4
+      .span1.space.s5
+      .span1.space.s6
+    .span2.js-theirs.offset1.funny-well.life
+  .row
+    .span3
+      .well.js-current-effects.js-mine
+    .span6
+      .well.event-log
+        %h6 Game log
+        %p Event here!
+        %p another event!
+        %p event log is great!
+    .span3
+      .well.js-current-effects.js-theirs
+  .row.attack-pairs
+    .span6
+      .js-mine.attack-pair.row
+        .span3
+          .style.real
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+          .style.preview
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+        .span3
+          .base.real
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+          .base.preview
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+      .row
+        .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
+          .btn.js-submit-attack-pair Submit
+    .span6
+      .js-theirs.attack-pair.row
+        .span3
+          .style.real
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+          .style.preview
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+        .span3
+          .base.real
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+          .base.preview
+            .well
+              .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
+
+  .js-answers
   .free-form
     .row
       .span4.offset4
