--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -22,6 +22,16 @@
   border-radius: 4px;
 }
 
+.header .character-desc {
+  display: none;
+  /*position: absolute;
+  width: 400px;*/
+}
+
+.header:hover .character-desc {
+  display: block;
+}
+
 .event-log {
   max-height: 100px;
   overflow: scroll;
