--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -9,8 +9,15 @@
           - User.except(current_user).each do |user|
             %li
               = link_to user.email, challenge_path(opponent_id: user.id)
+  %tr
+    %th Active Games
   -Game.active.order("created_at").each do |game|
     %tr
       %td
-        = link_to "#{game.p0.email} VS #{game.p1.email}", game_path(game)
-        = badges(game_badges(game))
+        = game_string(game)
+  %tr
+    %th Inactive Games
+  -Game.inactive.order("created_at").each do |game|
+    %tr
+      %td
+        = game_string(game)
