more finisher maintenance.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -121,6 +121,14 @@
                 .power
                 .priority
               .effects
+      .js-p0.special-action.row
+        .span6.special-action-card
+          .name
+            .rpp
+              .range
+              .power
+              .priority
+            .effects
       .row.js-p0
         .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
           .btn.js-submit-attack-pair Submit
@@ -160,6 +168,14 @@
                 .power
                 .priority
               .effects
+      .js-p1.special-action.row
+        .span6
+          .name
+            .rpp
+              .range
+              .power
+              .priority
+            .effects
       .row.js-p1
         .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
           .btn.js-submit-attack-pair Submit
