fixes display on the finishers.

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -123,7 +123,8 @@
               .effects
       .js-p0.special-action.row
         .span6.special-action-card
-          .name
+          .well
+            .name
             .rpp
               .range
               .power
@@ -169,13 +170,14 @@
                 .priority
               .effects
       .js-p1.special-action.row
-        .span6
-          .name
-            .rpp
-              .range
-              .power
-              .priority
-            .effects
+        .span6.special-action-card
+          .well
+            .name
+              .rpp
+                .range
+                .power
+                .priority
+              .effects
       .row.js-p1
         .offset2.span2.js-finalize-attack-pair{:style => "display: none"}
           .btn.js-submit-attack-pair Submit
